--- a/data/blog/_000 Draft.mdx
+++ b/data/blog/_000 Draft.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Draft' 
+title: 'Draft'
 authors: ['default']
 date: '2024-06-12'
 lastmod: '2024-09-23'
@@ -10,5 +10,9 @@ summary: 'Draft。'
 
 # photo
 
-
-<Image alt="001" src="https://fyllu8frywoegleh.public.blob.vercel-storage.com/photo-gJxkjRKGAgJVjmF2.jpg" width={400} height={200} />
+<Image
+  alt="001"
+  src="https://fyllu8frywoegleh.public.blob.vercel-storage.com/photo-gJxkjRKGAgJVjmF2.jpg"
+  width={400}
+  height={200}
+/>
