--- a/data/blog/240612-Introduction.mdx
+++ b/data/blog/240612-Introduction.mdx
@@ -3,7 +3,7 @@ title: '让“工业品智能专家”帮助工业品牌充分利用官网资讯
 authors: ['default']
 date: '2024-06-12'
 lastmod: '2024-10-16'
-tags: ['AIGC', '工业品', '中文']
+tags: ['AIGC', '工业品']
 draft: false
 layout: PostLayout
 summary: '我的观点：品牌的官网应该作为一个品牌的开放型资讯中心，减少信息传递过程当中人工干预的部分，提高效率同时降低错误率。'
