--- a/data/blog/241012-About-This-Blog.mdx
+++ b/data/blog/241012-About-This-Blog.mdx
@@ -1,9 +1,9 @@
 ---
-title: '搭建个人博客（官网 🤔）流程梳理'
+title: '应用实践-在线 | 搭建个人博客（官网 🤔）流程梳理'
 authors: ['default']
 date: '2024-10-12'
 lastmod: '2024-10-13'
-tags: ['博客', '中文']
+tags: ['网站搭建']
 draft: false
 layout: PostLayout
 summary: '我的观点：个人博客应该作为一个人的开放型资讯中心 🤔 。当各大平台都将数据封锁作为资产~'
