--- a/data/blog/Markdown-Language.mdx
+++ b/data/blog/Markdown-Language.mdx
@@ -36,22 +36,26 @@ summary: 'Markdown 常用标记语言集合。'
 
 ## 文本块
 
-- **邮件订阅入口** 
-<BlogNewsletterForm title="Like what you are reading?" />
+- **邮件订阅入口**
+
+  <BlogNewsletterForm title="Like what you are reading?" />
 
 - [链接文本](https://www.example.com)
+
 ```
 [链接文本](https://www.example.com)
 ```
 
 - **加粗文本**
+
 ```
 **加粗文本**
 
 __加粗文本__
 ```
 
-- **斜体文本**：*斜体文本* _斜体文本_
+- **斜体文本**：_斜体文本_ _斜体文本_
+
 ```
 *斜体文本*
 
@@ -59,6 +63,7 @@ _斜体文本_
 ```
 
 - **加删除线**：~~加删除线文本~~
+
 ```
 ~~加删除线文本~~
 ```
@@ -74,6 +79,7 @@ _斜体文本_
 ```
 
 > [!CAUTION]
+
 ```
 > [!CAUTION]
 ```
@@ -81,7 +87,7 @@ _斜体文本_
 - **列表**
   - 子项目1
   * 子项目2
-  + 子项目3
+  - 子项目3
 
 ```
 - **列表**
@@ -97,11 +103,12 @@ _斜体文本_
 - **表格**
 
 | 表头1 | 表头2 |
-| ----- | ------|
+| ----- | ----- |
 | 内容1 | 内容2 |
 | 内容3 | 内容4 |
 
 - **标题**
+
 ```
 # 一级标题
 ## 二级标题
@@ -113,7 +120,7 @@ _斜体文本_
 
 - **参考书目和引文 （v1.2.1）**：[timlrx/rehype-citation](https://github.com/timlrx/rehype-citation)
 
-Standard citation [@Nash1950]  
+Standard citation [@Nash1950]
 
 **References:**
 
@@ -134,11 +141,13 @@ Standard citation [@Nash1950]
 - [Basic writing and formatting syntax - GitHub Docs](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
 
 - **内嵌代码**：`内嵌代码`
+
 ```
 `内嵌代码`
 ```
 
 - **Python**
+
 ```python
 def fib():
     a, b = 0, 1
@@ -151,6 +160,7 @@ for index, fibonacci_number in zip(range(10), fib()):
 ```
 
 - **Bash**
+
 ```bash
 npm start
 # or
@@ -158,6 +168,7 @@ npm run dev
 ```
 
 - **Javascript**
+
 ```javascript
 var num1, num2, sum
 num1 = prompt('Enter first number')
@@ -165,6 +176,7 @@ num2 = prompt('Enter second number')
 sum = parseInt(num1) + parseInt(num2) // "+" means "add"
 alert('Sum = ' + sum) // "+" means combine into a string
 ```
+
 ```js {1,3-4} showLineNumbers
 var num1, num2, sum
 num1 = prompt('Enter first number')
@@ -172,6 +184,7 @@ num2 = prompt('Enter second number')
 sum = parseInt(num1) + parseInt(num2) // "+" means "add"
 alert('Sum = ' + sum) // "+" means combine into a string
 ```
+
 ```js
 analytics: {
     // supports plausible, simpleAnalytics or googleAnalytics
@@ -180,6 +193,7 @@ analytics: {
     googleAnalyticsId: '', // e.g. UA-000000-2 or G-XXXXXXX
   },
 ```
+
 ```diff-js:siteMetadata.js
 # 删除和加亮
 analytics: {
@@ -194,6 +208,7 @@ analytics: {
 ```
 
 - **Javascript XML**
+
 ```jsx
 // Or import PageTitle from './components/PageTitle.js' if you are using js
 import PageTitle from './components/PageTitle.tsx'
@@ -201,6 +216,7 @@ import PageTitle from './components/PageTitle.tsx'
 ```
 
 - **TypeScript**
+
 ```tsx
 'use client'
 
@@ -215,6 +231,7 @@ const DonutChart = ({ data }) => {
 
 export default Doughnut
 ```
+
 ```ts:contentlayer.config.ts
 export const Blog = defineDocumentType(() => ({
   name: 'Blog',
@@ -272,30 +289,33 @@ export const Blog = defineDocumentType(() => ({
 
 - 在线图片嵌入链接 [![Deploy with Vercel](https://vercel.com/button)](https://vercel.com/new/git/external?repository-url=https://github.com/timlrx/tailwind-nextjs-starter-blog)
 
-- 本地图片（定义大小） 
-<Image alt="favicon" src="/static/favicons/favicon.ico" width={100} height={100} />
+- 本地图片（定义大小）
 
-- 本地图片（自适应） 
-![favicon](/static/favicons/favicon.ico)
+  <Image alt="favicon" src="/static/favicons/favicon.ico" width={100} height={100} />
+
+- 本地图片（自适应）
+  ![favicon](/static/favicons/favicon.ico)
 
 - 本地图片并排
-<div className="-mx-2 flex flex-wrap overflow-hidden xl:-mx-2">
-  <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
-    ![favicon](/static/favicons/favicon.ico)
+
+  <div className="-mx-2 flex flex-wrap overflow-hidden xl:-mx-2">
+    <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
+      ![favicon](/static/favicons/favicon.ico)
+    </div>
+    <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
+      ![favicon](/static/favicons/favicon.ico)
+    </div>
+    <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
+      ![favicon](/static/favicons/favicon.ico)
+    </div>
+    <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
+      ![favicon](/static/favicons/favicon.ico)
+    </div>
   </div>
-  <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
-    ![favicon](/static/favicons/favicon.ico)
-  </div>
-  <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
-    ![favicon](/static/favicons/favicon.ico)
-  </div>
-  <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
-    ![favicon](/static/favicons/favicon.ico)
-  </div>
-</div>
 
 - 对话框
   {' '}
+
   <iframe
     title="agent"
     src="https://udify.app/chat/LRuTOu0nFAn4HfiJ"
@@ -306,6 +326,7 @@ export const Blog = defineDocumentType(() => ({
 
 - 本地视频
   {' '}
+
   <video
     controls
     alt="Video_20240902"
@@ -315,13 +336,12 @@ export const Blog = defineDocumentType(() => ({
   />
 
 - 在线视频
-<video controls>
-  <source
-    src="https://github-production-user-asset-6210df.s3.amazonaws.com/28362229/258559849-2124c81f-b99d-4431-839c-347e01a2616c.webm"
-    type="video/webm"
-  />
-</video>
-
+  <video controls>
+    <source
+      src="https://github-production-user-asset-6210df.s3.amazonaws.com/28362229/258559849-2124c81f-b99d-4431-839c-347e01a2616c.webm"
+      type="video/webm"
+    />
+  </video>
 
 ## Licence
 
